# ezkvm

./: Cargo.toml  README.md
.github/workflows/: rust.yml
debian/maintainer-scripts/: postinst  postrm
etc/: gyndine.yaml  macos-sequoia-desktop.yaml  mygeeto.yaml  ubuntu-oriole-desktop.yaml  wakiza.yaml  windows-11-desktop.yaml  windows-11-gaming.yaml
etc/resource/: fl1100.yaml  p2200.yaml  rx570.yaml  rx7700s.yaml  x550t2.yaml
etc/resources/: fl1100.yaml  p2200.yaml  rx570.yaml  x550t2.yaml
src/: args.rs  config.rs  main.rs  osal.rs  types.rs
src/config/: config.rs  cpu.rs  display.rs  general.rs  gpu.rs  host.rs  lg_host.rs  looking_glass.rs  memory.rs  mod.rs  network.rs  qemu_device.rs  spice.rs  storage.rs  system.rs  types.rs
src/config/bios/: mod.rs  ovmf.rs  seabios.rs
src/config/display/: gtk.rs  looking_glass.rs  mod.rs  no_display.rs  remote_viewer.rs
src/config/gpu/: mod.rs  no_gpu.rs  passthrough_gpu.rs  pool_gpu.rs  qxl_vga.rs  virtio_gpu_pci.rs  virtio_vga_gl.rs  vmware_svga.rs
src/config/host/: host_pci.rs  host_usb.rs  mod.rs
src/config/network/: bridge.rs  mod.rs  network_bridge_device.rs  network_footer.rs  network_header.rs  network_item.rs  network_payload.rs  network_pool_device.rs  tap.rs  x550vf.rs
src/config/storage/: ide_cd.rs  ide_cdrom_drive.rs  mod.rs  scsi_drive.rs  scsi_hard_drive.rs  scsi_hd.rs  storage_footer.rs  storage_header.rs  storage_item.rs  storage_payload.rs  virtio_blk_pci.rs
src/config/system/: applesmc.rs  bios.rs  chipset.rs  cpu.rs  memory.rs  mod.rs  system_q35.rs  tpm.rs
src/config/system/bios/: ovmf.rs  seabios.rs
src/config/system/chipset/: q35.rs
src/config/types/: pci.rs  usb.rs
src/lock/: lock.rs  lock_manager.rs  mod.rs
src/resource/: data_manager.rs  gpu_resource.rs  lock.rs  mod.rs  pci_resource.rs  resource.rs  resource_collection.rs  resource_pool.rs  x550_vf_resource.rs
src/yaml/: config.rs  display.rs  general.rs  gpu.rs  host.rs  looking_glass.rs  mod.rs  network.rs  spice.rs  storage.rs  system.rs
var/: wakiza.yaml
(+4 files in other folders)
