[package]
name = "ezkvm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yaml-rust = "0.4.5"
log = "0.4.21"
serde = { version = "1.0.200", features = ["derive"] }
toml = "0.8.12"
once_cell = "1.19.0"
colored = "2.1.0"
getopts = "0.2.21"
home = "0.5.9"
env_logger = "0.11.3"
chrono = "0.4.38"
minimal-yaml = "0.1.5"
serde_yaml = "0.9.34+deprecated"
