[package]
name = "poc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_yaml = "0.9.34+deprecated"
serde = { version = "1.0.203", features = ["derive"] }
typetag = "0.2.16"
log = "0.4.21"
chrono = "0.4.38"
colored = "2.1.0"
env_logger = "0.11.3"
getopts = "0.2.21"
once_cell = "1.19.0"
