[package]
name = "ezkvm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.21"
serde = { version = "1.0.200", features = ["derive"] }
toml = "0.8.12"
once_cell = "1.19.0"
colored = "2.1.0"
getopts = "0.2.21"
home = "0.5.9"
env_logger = "0.11.3"
chrono = "0.4.38"
serde_yaml = "0.9.34+deprecated"
tokio = { version = "1.39.3", features = ["sync"] }
nix = { version = "0.29.0", features = ["user"] }
typetag = "0.2.18"
derive-getters = "0.5.0"
mockall = "0.13.0"
mockall_double = "0.3.1"
serial_test = "3.1.1"
rand = { version = "0.8.5", features = ["small_rng"] }
paste = "1.0.15"
glob = "0.3.1"
cargo-deb = "2.9.1"

[package.metadata.deb]
maintainer = "Mark Hurenkamp <mark.hurenkamp@xs4all.nl>"
copyright = "2024, Mark Hurenkamp <mark.hurenkamp@xs4all.nl>"
extended-description = """A helper program to run virtual machines using qemu"""
depends = "$auto"
section = "utility"
priority = "optional"
assets = [
 [ "target/release/ezkvm", "usr/bin/", "755" ]
]

